# GovDataCrawler

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
.hypothesis/tmp/: tmpcwdyb8sz  tmpfg7ybfrn  tmpp141j398  tmpyfshov3l
.kiro/steering/: sre-knowledge.md
gov_data_crawler/: __init__.py  __main__.py  attachments.py  cli.py  contract.py  delay.py  detail_parser.py  http_client.py  listing.py  metadata.py  orchestrator.py  output.py  processor.py  resume.py  stop_condition.py  summary.py
openclaws/: Dockerfile  __init__.py  __main__.py  cli.py  config.py  discovery.py  granite_client.py  health_monitor.py  index.py  legislation.py  models.py  pdf_extractor.py  prompt_builder.py  query_engine.py
tests/integration/: test_crawl_orchestrator.py  test_pagination_flow.py
tests/property/: test_delay_mechanism_props.py  test_filename_extraction_props.py  test_listing_parser_props.py  test_metadata_roundtrip_props.py  test_openclaws_config_props.py  test_openclaws_discovery_props.py  test_openclaws_health_props.py  test_openclaws_index_props.py  test_openclaws_query_props.py  test_output_structure_props.py  test_resume_detector_props.py  test_sanitization_props.py  test_stop_condition_props.py  test_summary_reporter_props.py  test_url_construction_props.py
tests/unit/: test_attachment_downloader.py  test_cli.py  test_contract_processor.py  test_delay_mechanism.py  test_detail_parser.py  test_http_client.py  test_listing_parser.py  test_metadata_writer.py  test_openclaws_cli.py  test_openclaws_config.py  test_openclaws_docker.py  test_output_manager.py  (+7 more)
(+12 files in other folders)
