[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-data-crawler"
version = "1.2.0-SNAPSHOT"
description = "Web scraper for Brazilian government contract data from ComprasNet transparency portal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.122.3",
    "pytest-cov==6.1.1",
    "responses==0.25.7",
]

[project.scripts]
gov-data-crawler = "gov_data_crawler.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["gov_data_crawler*"]
